force-app/main/default/objects/Module__c/fields/image__c.field-meta.xml
<CustomField>
    <fullName>image__c</fullName>
    <label>image</label>
    <type>Url</type>
</CustomField>