force-app/main/default/objects/Module__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Lightning</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>App Lifecycle</fullName>
            </value>
            <value>
                <fullName>App Logic</fullName>
            </value>
            <value>
                <fullName>Database</fullName>
            </value>
            <value>
                <fullName>DataManagement</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>