force-app/main/default/objects/Module__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <summarizedField>Unit__c.Time__c</summarizedField>
    <summaryForeignKey>Unit__c.Module__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>