force-app/main/default/objects/Module__c/validationRules/Activation.validationRule-meta.xml
<ValidationRule>
    <fullName>Activation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( isActive__c  = TRUE ,   OR(  ISPICKVAL( Rol__c , &quot;&quot;)  ,  PICKLISTCOUNT( Skills__c ) =0  )  )</errorConditionFormula>
    <errorMessage>Skill and Rol cannot be none</errorMessage>
</ValidationRule>